fix: fixed file dropper not showing in merge files form

--- a/stylesheets/components/_table.scss
+++ b/stylesheets/components/_table.scss
@@ -29,9 +29,9 @@
 
 .tabs {
   display: flex;
+  align-items: center;
   gap: var(--s3);
-  padding: 0 var(--s2) var(--s2);
-  margin-bottom: var(--s2);
+  padding: 0 var(--s2) var(--s3);
 }
 
 .tabs__create-new {
@@ -39,8 +39,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 30px;
-  height: 30px;
+  width: 28px;
+  height: 28px;
   padding-left: 2px;
   padding-bottom: 3px;
   background-color: inherit;
@@ -65,10 +65,13 @@
 
 .tabs__btn {
   position: relative;
+  max-width: 300px;
   border-bottom: 2px solid transparent;
   color: var(--secondary);
   background-color: inherit;
   font-size: var(--fs2);
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .tabs__btn.active {
